# instituto_biblico

./: GEMINI.md  PROGRESS.md  inspect_recordings.py  main.py  railway.json  test_token.py
backend/: .env  .env.example  Dockerfile  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: 07956efe99ed_add_consultas_table.py  088dc0c77aac_add_room_url_to_clases.py  0d6a02722db6_initial_migration.py  1f0b9ce8a08d_add_clases_completadas.py  46c679a000f8_add_libros_and_entregas.py  4f9618f8d22a_add_server_defaults_for_timestamps.py  5f3e9b2a1c8d_fix_delete_cascade.py  a91feb4ca70e_add_tareas_and_enrollments_tables.py
backend/app/: main.py
backend/app/api/v1/endpoints/: auth.py  courses.py  health.py  users.py  webhooks.py
backend/app/core/: celery.py  config.py  database.py  exceptions.py  logging.py  middleware.py
backend/app/models/: base.py  course.py  user.py
backend/app/schemas/: course.py  user.py
backend/app/services/: content.py  user_service.py
backend/scripts/: seed_db.py
design/: admin_panel.html  authentication.html  course_content_editor.html  gradebook.html  landing_page.html  register.html  student_dashboard.html  subject_detail.html  teacher_panel.html  user_profile.html  user_profile.md  virtual_classrom.html  virtual_library.html
frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.js
frontend/frontend/: package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: AdminPanelPage.tsx  GradebookPage.tsx  (+12 more)
supabase/: config.toml
(+11 files in other folders)
